# ProductAPI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2024-08-19_add_product_and_user.py  2024-08-19_add_super_user.py
src/: config.py  database.py  main.py  schemas.py
src/application/: readme.txt
src/domain/products/: __init__.py  entities.py  interfaces.py  service.py
src/domain/users/: __init__.py  entities.py  interfaces.py  repository.py  service.py
src/infrastructure/repositories/: __init__.py  product.py  user.py
src/infrastructure/uow/: product.py  user.py
src/presentation/api/v1/: __init__.py  dependencies.py  exceptions.py
src/presentation/api/v1/auth/: __init__.py  config.py  dependencies.py  exceptions.py  router.py  schemas.py
src/presentation/api/v1/products/: __init__.py  router.py  schemas.py
tests/: conftest.py
tests/api/: test_auth_router.py  test_product_router.py
